--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <section class="hero">
         <h1>hello, I'm Alaa</h1>
+        <img src="myphoto.jpg">
         <p>Frontend Developer | UI/UX Enthusiast</p>
         <a href="#projects" class="toProjects">View My Work</a>
     </section>
@@ -32,17 +33,40 @@
         </p>
     </section>
 
+<section class="info">
+    <h3> Contact Information </h3>
+    <div>Email: alaaabubakr@yahoo.com  </div>
+    <div>LinkedIn:https://eg.linkedin.com/in/alaa-abu-bakr-233958105</div>
+    <div>Phone number: +201112424088 </div>
+
+</section>
+<section class="info">
+
+    <h3>Education</h3>
+ <div>Faculty of economics</div>
+ <span>Magor: Economics</span>
+ <span>Minor: computer science</span>
+</section>
+
+<section class="info">
+
+ <h3>Experience </h3> 
+ <div>Internship for 6 Months with Rowad Misr -Telecomunication Minstry</div> 
+ 
+</section>
     <section id="projects" class="projects">
         <h2>Projects</h2>
         <div class="project-container">
             <div class="project">
-                <h3>Project 1</h3>
-                <p>A brief description of Project 1.</p>
+                <h3>Weather App</h3>
+                <img src="weather.png">
+                <p>Built a single-page weather application that displays real-time weather data for any location.</p>
                 <a href="http://www.google.com" class="project-link">View Project</a>
             </div>
             <div class="project">
-                <h3>Project 2</h3>
-                <p>A brief description of Project 2.</p>
+                <h3>E-commerce Product Page</h3>
+                <img src="ecommerce.jpg">
+                <p>A Created a modern, responsive landing page for an e-commerce product, showcasing its features and benefits..</p>
                 <a href="http://www.google.com" class="project-link">View Project</a>
             </div>
             
