--- a/index.html
+++ b/index.html
@@ -73,18 +73,61 @@
         </div>
     </section>
 
-    <section id="contact" class="contact">
-        <h2>Contact Me</h2>
-        <form class="contact-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+<section class="sendmail">
+<h1>Send Email</h1>
+  <form id="emailForm">
+    <label for="name">Name :  </label>
+    <input type="text" id="name" name="name" required><br><br>
 
-            <button type="submit">Send</button>
-        </form>
-    </section>
+    <label for="email">Email :  </label>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="4" required></textarea><br><br>
+
+    <button type="button" id="sendButton">Send Email</button>
+  </form>
+
+</section>
+
+  <script>
+    // Initialize EmailJS
+    (function () {
+      emailjs.init('YOUR_USER_ID'); // Replace with your EmailJS User ID
+    })();
+
+    // Function to send the email
+    document.getElementById('sendButton').addEventListener('click', function () {
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const message = document.getElementById('message').value;
+
+      if (name && email && message) {
+        const emailParams = {
+          from_name: name,
+          from_email: email,
+          message: message,
+        };
+
+        emailjs
+          .send('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', emailParams)
+          .then(
+            function (response) {
+              alert('Email sent successfully!');
+              console.log('SUCCESS!', response.status, response.text);
+            },
+            function (error) {
+              alert('Failed to send email. Please try again.');
+              console.error('FAILED...', error);
+            }
+          );
+      } else {
+        alert('Please fill out all fields before sending the email.');
+      }
+    });
+  </script>
+
 
     
 </body>
