--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                 <h3>Weather App</h3>
                 <img src="weather.png">
                 <p>Built a single-page weather application that displays real-time weather data for any location.</p>
-                <a href="http://www.google.com" class="project-link">View Project</a>
+                <a href="https://www.accuweather.com/en/eg/alexandria/126995/weather-tomorrow/126995#google_vignette" class="project-link">View Project</a>
             </div>
             <div class="project">
                 <h3>E-commerce Product Page</h3>
                 <img src="ecommerce.jpg">
                 <p>A Created a modern, responsive landing page for an e-commerce product, showcasing its features and benefits..</p>
-                <a href="http://www.google.com" class="project-link">View Project</a>
+                <a href="https://www.shopify.com/blog/what-is-ecommerce">View Project</a>
             </div>
             
         </div>
