--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <div class="logo">Mohamed Abd Elaziz Mohamed</div>
+            <div class="logo">Mohamed Ali Mohamed</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -18,10 +18,9 @@
     </header>
 
     <section class="hero">
-        <h1>hello, I'm Ali</h1>
-        <img src="myphoto.jpg">
-        <p> Developer | UI/UX Enthusiast</p>
-        <a href="#projects" class="toProjects">View My Work</a>
+        <h1>hello, I'm MohamedAli</h1>
+        <img src="mohamed.jpg">
+        <p> Human Resources Director </p>
     </section>
 
     <section id="about" class="about">
