--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
 <body>
     <header class="header">
         <nav class="navbar">
+        </br>
             <div class="logo">Mohamed Ali Mohamed</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>hello, I'm MohamedAli</h1>
-        <img src="mohamed.jpg">
+        <h1>hello, I'm Mohamed Ali</h1>
+        <img src="mohamed.jpeg">
         <p> Human Resources Director </p>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
         <p>
-           Experienced Human Resources Director with over 17 years in HR leadership across international hotel chains. Proven expertise in talent acquisition, workforce planning, employee relations, legal compliance, payroll, and HR strategy implementation. Seeking an opportunity to bring HR excellence to a dynamic organization in Canada.
+           Experienced Human Resources Director with over 17 years in HR leadership across international hotel chains.</br> 
+            Proven expertise in talent acquisition, workforce planning, employee relations, legal compliance, payroll,</br> 
+            and HR strategy implementation. Seeking an opportunity to bring HR excellence to a dynamic organization in Canada.
         </p>
     </section>
 
@@ -47,19 +49,23 @@
 <section class="info">
 
  <h3>Experience </h3> 
- <div>Personal goal pursuit
-Personal goal pursuit
-Career Break
+ <div>
+<h4>Personal goal pursuit></h4>
+<h5>Career Break</h5>
 Jan 2025 - Present ·  
 Cairo</div> 
+    <hr>
+
  <div>
-Human Resources Director
-The Westin Cairo Golf Resort & Spa, Katameya Dunes ·
-     Full-timeThe Westin Cairo Golf Resort & Spa, Katameya Dunes ·  
+<h4>Human Resources Director></h4>
+<h5>The Westin Cairo Golf Resort & Spa, Katameya Dunes·</h5>
+Full-timeThe Westin Cairo Golf Resort & Spa, Katameya Dunes ·  
 Aug 2022 - May 2024 ·   </div> 
+    <hr>
+
  <div>
-Human Resources Director
-Sheraton Soma Bay Resort · 
+<h4>Human Resources Director></h4>
+<h5>Sheraton Soma Bay Resort · </h5>
 Nov 2020 - Aug 2022 ·
 Hurghada, Al Bahr al Ahmar, EgyptHurghada, Al Bahr al Ahmar, Egypt
 The Director of Human Resources will report directly to the property General Manager, with a dotted-line (functional) reporting relationship to the Regional Senior Director of Human Resources and will be an integral member of the property executive committee. As a member of the Human Resources organization, he/she contributes a high level of human resource generalist knowledge and expertise for a designated property. He/she will be accountable for talent acquisition, succession/workforce planning, performance management and development for property employees, using technology efficiently, and coaching/developing others to help influence and execute business objectives in the most efficient manner. He/she generally works with considerable independence, developing processes to accomplish objectives in alignment with broader business objectives. Additionally, he/she utilizes a Human Resource Business Plan aligned with property and brand strategies to deliver HR services that enable business success.   </div> 
