--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section class="hero">
-        <h1>hello, I'm Mohamed Ali</h1>
+        <h1 style="padding-top: 30px">hello, I'm Mohamed Ali</h1>
         <img src="mohamed.jpeg">
         <p> Human Resources Director </p>
     </section>
@@ -50,22 +50,22 @@
 
  <h3>Experience </h3> 
  <div>
-<h4>Personal goal pursuit></h4>
+<h4>Personal goal pursuit</h4>
 <h5>Career Break</h5>
 Jan 2025 - Present ·  
 Cairo</div> 
     <hr>
 
  <div>
-<h4>Human Resources Director></h4>
+<h4>Human Resources Director</h4>
 <h5>The Westin Cairo Golf Resort & Spa, Katameya Dunes·</h5>
 Full-timeThe Westin Cairo Golf Resort & Spa, Katameya Dunes ·  
 Aug 2022 - May 2024 ·   </div> 
     <hr>
 
  <div>
-<h4>Human Resources Director></h4>
-<h5>Sheraton Soma Bay Resort · </h5>
+<h4>Human Resources Director</h4>
+<h5>Sheraton Soma Bay Resort· </h5>
 Nov 2020 - Aug 2022 ·
 Hurghada, Al Bahr al Ahmar, EgyptHurghada, Al Bahr al Ahmar, Egypt
 The Director of Human Resources will report directly to the property General Manager, with a dotted-line (functional) reporting relationship to the Regional Senior Director of Human Resources and will be an integral member of the property executive committee. As a member of the Human Resources organization, he/she contributes a high level of human resource generalist knowledge and expertise for a designated property. He/she will be accountable for talent acquisition, succession/workforce planning, performance management and development for property employees, using technology efficiently, and coaching/developing others to help influence and execute business objectives in the most efficient manner. He/she generally works with considerable independence, developing processes to accomplish objectives in alignment with broader business objectives. Additionally, he/she utilizes a Human Resource Business Plan aligned with property and brand strategies to deliver HR services that enable business success.   </div> 
